# ompl

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build_bin.sh  build_release.sh
.github/workflows/: build_release_master.yml  build_release_tag.yml  sympal.yml  test.yml
src/: main.rs  player.rs  tui.rs
src/tui/: mod.rs  stylesheet.rs  theme.rs
src/tui/widgets/: art.rs  filterpanes.rs  filtertreeview.rs  menubar.rs  mod.rs  queue.rs  queuetable.rs  seeker.rs  sortpanes.rs  statusbar.rs
sympal_suite/: autotest.sh  fetch_media.sh
tests/sympal/: autotest.sh
