[package]
name = "ompl"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.9"
# colcon = { git = "https://github.com/Beinsezii/colcon.git" }
bincode = "1"
bus = "2"
clap = { version = "4", features = ["derive", "unicode"] }
lexical-sort = "0.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ['all']}
walkdir = "2"

rodio = { version = "0.16", optional = true } # 0.17 panics when source ends

cpal = {version = "0.15", optional = true}
dasp = {version = "0.11", optional = true, features = ["all"]}

souvlaki = {version = "0.7", optional = true, default-features = false, features = ['use_zbus']}

crossterm = {version = "0.27", optional = true}
tui = { version = "0.19", default-features = false, features = ['crossterm'] , optional = true}

copypasta = {version = "0.10", optional=true}



[features]
media-controls = ["dep:souvlaki"]
tui = ["dep:tui", "dep:crossterm"]
clipboard = ["dep:copypasta", "tui"]
backend-rodio = ["dep:rodio"]
backend-sympal = ["dep:cpal", "dep:dasp"]
jack = ["cpal/jack"]

default = ["media-controls", "tui", "clipboard", "backend-sympal"]

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.5"
winit = {version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
